--- a/GalleryInfrastructure/Views/Authors/Index.cshtml
+++ b/GalleryInfrastructure/Views/Authors/Index.cshtml
@@ -9,39 +9,21 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Biography)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Country)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Biography)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Country.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="list-group">
+    @foreach (var item in Model)
+    {
+        <div class="list-group-item author_card_wrapper">
+            <div class="d-flex author_card_title">
+                <div><h3>@Html.DisplayFor(modelItem => item.Name)</h3></div>
+                <div>@Html.DisplayFor(modelItem => item.Country.Name)</div>
+            </div>
+            <div><strong>@Html.DisplayNameFor(model => model.Biography):<br /></strong> @Html.DisplayFor(modelItem => item.Biography)</div>
+            <div>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Delete</a>
+            </div>
+        </div>
+    }
+</div>
+
