--- a/GalleryInfrastructure/Views/Countries/Index.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Index.cshtml
@@ -1,35 +1,25 @@
 ﻿@model IEnumerable<GalleryDomain.Model.Country>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Країни";
 }
 
-<h1>Index</h1>
+<h1>Країни</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Додати країну</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="list-group">
+    @foreach (var item in Model)
+    {
+        <div class="list-group-item d-flex justify-content-between align-items-center">
+            <span>@Html.DisplayFor(modelItem => item.Name)</span>
+            <div>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Delete</a>
+            </div>
+        </div>
+    }
+</div>
+
