--- a/GalleryInfrastructure/Views/Locations/Index.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Index.cshtml
@@ -1,41 +1,25 @@
 ﻿@model IEnumerable<GalleryDomain.Model.Location>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Локації";
 }
 
-<h1>Index</h1>
+<h1>Локації</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Додати локацію</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Link)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Link)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="list-group">
+    @foreach (var item in Model)
+    {
+        <div class="list-group-item d-flex justify-content-between">
+            <a href="@item.Link" target="_blank">@item.Name</a>
+            <div>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</a>
+            </div>
+        </div>
+    }
+</div>
+
