--- a/GalleryInfrastructure/wwwroot/css/site.css
+++ b/GalleryInfrastructure/wwwroot/css/site.css
@@ -20,3 +20,19 @@ html {
 body {
   margin-bottom: 60px;
 }
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+/*start author block*/
+.author_card_wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 15px;
+    min-width: 200px;
+    max-width: 500px;
+}
+.author_card_title {
+    align-items: center;
+    justify-content: space-between
+}
