updated PhotosController (Create method)

--- a/GalleryInfrastructure/Views/Authors/AuthorsByCountry.cshtml
+++ b/GalleryInfrastructure/Views/Authors/AuthorsByCountry.cshtml
@@ -1,9 +1,7 @@
-﻿
-
-@model IEnumerable<GalleryDomain.Model.Author>
+﻿@model IEnumerable<GalleryDomain.Model.Author>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "AuthorsByCountry";
 }
 
 <h1>Index</h1>
