--- a/GalleryInfrastructure/Views/Countries/Index.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<GalleryDomain.Model.Country>
+﻿@* to delete *@
+
+@model IEnumerable<GalleryDomain.Model.Country>
 
 @{
     ViewData["Title"] = "Країни";
@@ -15,9 +17,9 @@
         <div class="list-group-item d-flex justify-content-between align-items-center">
             <span>@Html.DisplayFor(modelItem => item.Name)</span>
             <div>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Редагувати</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Переглянути фотографів з цієї країни</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Видалити</a>
             </div>
         </div>
     }
