--- a/GalleryInfrastructure/Views/Authors/Edit.cshtml
+++ b/GalleryInfrastructure/Views/Authors/Edit.cshtml
@@ -41,4 +41,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/site.js"></script>
 }
