--- a/GalleryInfrastructure/Views/Countries/Create.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Create.cshtml
@@ -30,4 +30,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/site.js"></script>
 }
