--- a/GalleryInfrastructure/Views/Locations/Create.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Create.cshtml
@@ -35,4 +35,6 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/site.js"></script>
+
 }
