--- a/GalleryInfrastructure/Views/Photos/Create.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Create.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
+                <input type="date" asp-for="Date" class="form-control" id="dateInput" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -73,17 +73,8 @@
                 reader.readAsDataURL(file);
             }
         });
-
-        // Очищення повідомлень про помилки при введенні даних
-        const inputs = document.querySelectorAll('.form-control');
-        inputs.forEach(input => {
-            input.addEventListener('input', function () {
-                const errorSpan = this.nextElementSibling; 
-                if (errorSpan) {
-                    errorSpan.textContent = ''; 
-                }
-            });
-        });
     </script>
+    <script src="~/js/site.js"></script>
+    <script src="/js/dateInput.js"></script>
 }
 
