--- a/GalleryInfrastructure/Views/Photos/Edit.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Edit.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
+                <input type="date" asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -74,16 +74,9 @@
             }
         });
 
-        // Очищення повідомлень про помилки при введенні даних
-        const inputs = document.querySelectorAll('.form-control');
-        inputs.forEach(input => {
-            input.addEventListener('input', function () {
-                const errorSpan = this.nextElementSibling;
-                if (errorSpan) {
-                    errorSpan.textContent = '';
-                }
-            });
-        });
+        
     </script>
+    <script src="~/js/site.js"></script>
+
 
 }
