--- a/GalleryInfrastructure/Views/Photos/Index.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Index.cshtml
@@ -67,3 +67,39 @@
 }
     </tbody>
 </table>
+
+
+<div class="row">
+    @foreach (var item in Model)
+    {
+        @if (item.Image != null)
+        {
+            var base64 = Convert.ToBase64String(item.Image);
+            var imgSrc = $"data:image/jpeg;base64,{base64}";
+            <img src="@imgSrc" alt="Image" />
+        }
+    }
+</div>
+
+@section Scripts {
+    <script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
+
+    <script>
+        var msnry; 
+
+        function initMasonry() {
+            var grid = document.querySelector('.row');
+            msnry = new Masonry(grid, {
+                itemSelector: 'img',
+                columnWidth: 'img',
+                percentPosition: true
+            });
+        }
+
+        document.addEventListener("DOMContentLoaded", function () {
+            initMasonry();
+        });
+    </script>
+}
+
+           
