--- a/GalleryInfrastructure/wwwroot/css/site.css
+++ b/GalleryInfrastructure/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-html {
+﻿html {
   font-size: 14px;
 }
 
@@ -36,3 +36,43 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     justify-content: space-between
 }
+
+.row {
+    display: flex; 
+    flex-wrap: wrap; 
+    gap: 8px; 
+    padding: 10px 4px;
+}
+
+.row img {
+    margin-bottom: 15px;
+    max-width: 33%;
+    height: auto;
+    object-fit: cover;
+    display: block;
+    break-inside: avoid;
+    flex: 1 1 calc(33.333% + 8px);
+    border-radius: 8px;
+}
+
+
+
+
+
+
+@media screen and (max-width: 800px) {
+    .row img {
+        max-width: 49%;
+    }
+}
+@media screen and (max-width: 600px) {
+    .row img {
+        max-width: 100%;
+    }
+}
+
+
+
+
+
+
