--- a/GalleryInfrastructure/Views/Countries/Create.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Create.cshtml
@@ -18,14 +18,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Додати" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Всі країни</a>
 </div>
 
 @section Scripts {
