--- a/GalleryInfrastructure/Views/Countries/Delete.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Delete.cshtml
@@ -22,7 +22,7 @@
     <form id="deleteForm" asp-action="Delete" method="post" data-return-url="@Url.Action("Index")">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Всі країни</a>
     </form>
 </div>
 @section Scripts {
