--- a/GalleryInfrastructure/Views/Locations/Edit.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Edit.cshtml
@@ -24,14 +24,14 @@
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Зберегти зміни" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Всі локації</a>
 </div>
 
 @section Scripts {
