--- a/GalleryInfrastructure/Views/Photos/Delete.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Delete.cshtml
@@ -52,7 +52,7 @@
     <form id="deleteForm" asp-action="Delete" method="post" data-return-url="@Url.Action("Index")">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Всі фото</a>
     </form>
 </div>
 @section Scripts {
