--- a/GalleryInfrastructure/Views/Shared/_Layout.cshtml
+++ b/GalleryInfrastructure/Views/Shared/_Layout.cshtml
@@ -26,16 +26,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Authors" asp-action="Index">Authors</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Authors" asp-action="Index">Фотографи</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Countries" asp-action="Index">Countries</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Countries" asp-action="Index">Країни</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Locations" asp-action="Index">Locations</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Locations" asp-action="Index">Локації</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Photos" asp-action="Index">Photos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Photos" asp-action="Index">Галерея</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - GalleryInfrastructure - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; Автор: Дейко Вероніка - ТТП-32. <a asp-area="" asp-controller="Home" asp-action="Privacy">Приватність</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
