--- a/GalleryInfrastructure/Views/Countries/Details.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model GalleryDomain.Model.Country
+﻿@* видалити *@
+
+@model GalleryDomain.Model.Country
 
 @{
     ViewData["Title"] = "Details";
@@ -22,3 +24,4 @@
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Всі країни</a>
 </div>
+
