--- a/GalleryInfrastructure/Views/Locations/Delete.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Delete.cshtml
@@ -1,14 +1,12 @@
 ﻿@model GalleryDomain.Model.Location
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Видалення";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Location</h4>
+    <h4>Сторінка видалення</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
