--- a/GalleryInfrastructure/Views/Locations/Details.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model GalleryDomain.Model.Location
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Інформація";
 }
 
-<h1>Details</h1>
 
 <div>
-    <h4>Location</h4>
+    <h4>Інформація</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -25,6 +24,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Редагувати</a> |
     <a asp-action="Index">Всі локації</a>
 </div>
