--- a/GalleryInfrastructure/Views/Photos/Create.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model GalleryDomain.Model.Photo
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Створення";
 }
 
-<h1>Create</h1>
 
-<h4>Photo</h4>
+<h4>Створення</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -46,7 +45,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Додати" class="btn btn-primary" />
             </div>
         </form>
     </div>
