--- a/GalleryInfrastructure/Views/Authors/Delete.cshtml
+++ b/GalleryInfrastructure/Views/Authors/Delete.cshtml
@@ -1,14 +1,12 @@
 ﻿@model GalleryDomain.Model.Author
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Видалення";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Author</h4>
+    <h4>Стоірнка видалення</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,7 +29,7 @@
         </dd>
     </dl>
     
-    <form id="deleteForm" asp-action="Delete" method="post" data-return-url="@Url.Action("Index")">
+    <form id="deleteForm" asp-action="Видалити" method="post" data-return-url="@Url.Action("Index")">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Всі фотографи</a>
