--- a/GalleryInfrastructure/Views/Authors/Index.cshtml
+++ b/GalleryInfrastructure/Views/Authors/Index.cshtml
@@ -24,8 +24,8 @@
             <div><strong>@Html.DisplayNameFor(model => model.Biography):<br /></strong> @Html.DisplayFor(modelItem => item.Biography)</div>
             <div>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Редагувати інформацію</a>
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Інформація та роботи</a>
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Видалити</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Інформація @* та роботи *@</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Видалити</a> 
             </div>
         </div>
     }
