--- a/GalleryInfrastructure/Views/Countries/Create.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model GalleryDomain.Model.Country
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Створення";
 }
 
-<h1>Create</h1>
 
-<h4>Country</h4>
+<h4>Створення</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
