--- a/GalleryInfrastructure/Views/Locations/Edit.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model GalleryDomain.Model.Location
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редагування";
 }
 
-<h1>Edit</h1>
 
-<h4>Location</h4>
+<h4>Редагування</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
