--- a/GalleryInfrastructure/Views/Locations/Index.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Index.cshtml
@@ -15,9 +15,9 @@
         <div class="list-group-item d-flex justify-content-between">
             <a href="@item.Link" target="_blank">@item.Name</a>
             <div>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Редагувати</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Інформація</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Видалити</a>
             </div>
         </div>
     }
