--- a/GalleryInfrastructure/Views/Photos/Delete.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Delete.cshtml
@@ -1,14 +1,12 @@
 ﻿@model GalleryDomain.Model.Photo
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Видалення";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Photo</h4>
+    <h4>Видалення</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -33,7 +31,12 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            @if (Model.Image != null)
+            {
+                var base64 = Convert.ToBase64String(Model.Image);
+                var imgSrc = $"data:image/jpeg;base64,{base64}";
+                <img src="@imgSrc" alt="Image" style="max-width: 150px; max-height: 150px;" />
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Author)
@@ -51,7 +54,7 @@
     
     <form id="deleteForm" asp-action="Delete" method="post" data-return-url="@Url.Action("Index")">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Видалити" class="btn btn-danger" /> |
         <a asp-action="Index">Всі фото</a>
     </form>
 </div>
