--- a/GalleryInfrastructure/Views/Photos/Details.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model GalleryDomain.Model.Photo
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Деталі";
 }
 
-<h1>Details</h1>
 
 <div>
-    <h4>Photo</h4>
+    <h4>Деталі</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -32,7 +31,12 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            @if (Model.Image != null)
+            {
+                var base64 = Convert.ToBase64String(Model.Image);
+                var imgSrc = $"data:image/jpeg;base64,{base64}";
+                <img src="@imgSrc" alt="Image" style="max-width: 400px; max-height: auto;" />
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Author)
@@ -49,6 +53,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Редагувати</a> |
     <a asp-action="Index">Всі фото</a>
 </div>
