--- a/GalleryInfrastructure/Views/Photos/Edit.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model GalleryDomain.Model.Photo
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редагування";
 }
 
-<h1>Edit</h1>
 
-<h4>Photo</h4>
+<h4>Редагування</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -66,7 +65,7 @@
             if (file) {
                 const reader = new FileReader();
                 reader.onload = function (e) {
-                    const preview = document.getElementById('previewImage'); // Переконайтеся, що це правильний id
+                    const preview = document.getElementById('previewImage'); 
                     preview.src = e.target.result;
                     document.getElementById('imagePreview').style.display = 'block';
                 };
