--- a/GalleryInfrastructure/Views/Locations/Edit.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Edit.cshtml
@@ -4,8 +4,7 @@
     ViewData["Title"] = "Редагування";
 }
 
-
-<h4>Редагування</h4>
+<h4>Редагування локації</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -21,6 +20,16 @@
                 <input asp-for="Link" class="form-control" />
                 <span asp-validation-for="Link" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Latitude" class="control-label"></label>
+                <input asp-for="Latitude" class="form-control" type="number" step="any" />
+                <span asp-validation-for="Latitude" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Longitude" class="control-label"></label>
+                <input asp-for="Longitude" class="form-control" type="number" step="any" />
+                <span asp-validation-for="Longitude" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <input type="submit" value="Зберегти зміни" class="btn btn-primary" />
@@ -34,6 +43,8 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
     <script src="~/js/site.js"></script>
 }
