updated landing page for photos and added map

--- a/GalleryInfrastructure/Views/Authors/Index.cshtml
+++ b/GalleryInfrastructure/Views/Authors/Index.cshtml
@@ -10,7 +10,7 @@
     <h1>Фотографи</h1>
 
     <p>
-        <a asp-action="Create">Додати фотографа</a>
+        <a asp-action="Create" class="btn btn-light">Додати фотографа</a>
     </p>
 </div>
 <div class="list-group list-group-author">
