--- a/GalleryInfrastructure/Views/Locations/Delete.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Delete.cshtml
@@ -25,7 +25,7 @@
     
     <form id="deleteForm" asp-action="Delete" method="post" data-return-url="@Url.Action("Index")">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Видалити локацію" class="btn btn-danger" /> |
         <a asp-action="Index">Всі локації</a>
     </form>
 </div>
