--- a/GalleryInfrastructure/Views/Locations/Index.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Index.cshtml
@@ -5,16 +5,17 @@
 }
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
-<h1>Локації</h1>
-
-<p>
-    <a asp-action="Create">Додати локацію</a>
-</p>
+<div class="d-flex justify-content-between ">
+    <h1>Локації</h1>
+    <p>
+        <a asp-action="Create" class="btn btn-light">Додати локацію</a>
+    </p>
+</div>
 <div class="list-group">
     @foreach (var item in Model)
     {
         <div class="list-group-item d-flex justify-content-between">
-            <a href="@item.Link" target="_blank">@item.Name</a>
+            <a href="@item.Link" target="_blank">@item.Name</a>            
             <div>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Редагувати</a>
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Інформація</a>
@@ -24,14 +25,14 @@
     }
 </div>
 
-<div id="map"></div>
+<div id="map" style="height: 500px;"></div>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
     // Збираємо дані локацій з моделі
     const locations = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model));
 
-    const map = L.map('map').setView([51.5, -0.09], 2); // Центр карти (змініть координати на потрібні)
+    const map = L.map('map').setView([50.4501, 30.5234], 12); // Центр карти - Київ
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 19,
@@ -53,11 +54,41 @@
     }
 
     // Додати маркер на карту
+    // Додати маркер на карту
     function addMarker(location) {
+        let popupContent = `<strong>${location.Name}</strong>`;
+
+        // Перевірка наявності посилання
+        if (location.Link) {
+            popupContent += `<br><a href="${location.Link}" target="_blank">Перейти до локації</a>`;
+        }
+
         const marker = L.marker([location.Latitude, location.Longitude]).addTo(map)
-            .bindPopup(`<strong>${location.Name}</strong><br><a href="${location.Link}" target="_blank">Перейти до локації</a>`);
+            .bindPopup(popupContent)
+            .bindTooltip(location.Name, { direction: 'top' }) // Додаємо тултіп з позицією зверху
+            .on('click', function () {
+                map.setView([location.Latitude, location.Longitude], 11); // Переміщення при натисканні на маркер
+            });
+
+        // При відкритті попапа ховаємо тултіп
+        marker.on('popupopen', function (e) {
+            marker.unbindTooltip();
+        });
+
+        // При закритті попапа знову додаємо тултіп
+        marker.on('popupclose', function (e) {
+            marker.bindTooltip(location.Name, { direction: 'top' }); // Тултіп буде з'являтись зверху
+        });
     }
+
+
+
 
     // Відображення всіх маркерів спочатку
     displayMarkers();
+
+    // Функція для переміщення до локації на карті
+    function moveToLocation(lat, lng) {
+        map.setView([lat, lng], 15); // Переміщення до координат локації з збільшенням
+    }
 </script>
