--- a/GalleryInfrastructure/wwwroot/css/site.css
+++ b/GalleryInfrastructure/wwwroot/css/site.css
@@ -63,19 +63,92 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-.img-row img {
-    padding: 15px;
-    max-width: 33%;
-    height: auto;
-    object-fit: cover;
-    display: block;
-    break-inside: avoid;
-    flex: 1 1 calc(33.333% + 8px);
-    border-radius: 8px;
+    .img-row img {
+        padding: 15px;
+        max-width: 33%;
+        height: auto;
+        object-fit: cover;
+        display: block;
+        break-inside: avoid;
+        flex: 1 1 calc(33.333% + 8px);
+        border-radius: 8px;
+    }
+
+.thumbnail {
+    cursor: pointer;
 }
 
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 90%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+}
 
+.lightbox-img {
+    max-width: 60%;
+    max-height: 60%;
+}
 
+.lightbox-info {
+    padding: 5px 40px;
+    width: 70%;
+    margin-top: 2px;
+}
+.close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+}
+
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.prev {
+    left: 20px; 
+}
+
+.next {
+    right: 20px; 
+}
+
+.lightbox-flex {
+    padding: 0 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.lightbox-description {
+    margin: 5px;
+    padding: 5px 30px;
+
+}
+
+#delete-link {
+
+}
+
+#edit-link {
+
+}
 
 
 @media screen and (max-width: 1000px) {
