added fixed nav bar

--- a/GalleryInfrastructure/Views/Authors/Index.cshtml
+++ b/GalleryInfrastructure/Views/Authors/Index.cshtml
@@ -5,10 +5,10 @@
 @{
     ViewData["Title"] = "Фотографи";
 }
+<div class="margin_top_50"></div>
 
 <div class="d-flex align-items-center flex-column">
     <h1>Фотографи</h1>
-
     <p>
         <a asp-action="Create" class="btn btn-light">Додати фотографа</a>
     </p>
