--- a/GalleryInfrastructure/Views/Countries/Index.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Index.cshtml
@@ -5,6 +5,7 @@
 @{
     ViewData["Title"] = "Країни";
 }
+<div class="margin_top_50"></div>
 
 <div class="d-flex justify-content-between ">
     <h1>Країни</h1>
