--- a/GalleryInfrastructure/Views/Authors/Create.cshtml
+++ b/GalleryInfrastructure/Views/Authors/Create.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "Додавання";
 }
+<div class="margin_top_50"></div>
 
-<h1>Create</h1>
 
 <h4>Додавання фотографа</h4>
 <hr />
@@ -26,17 +26,15 @@
                 <textarea id="biography" asp-for="Biography" class="form-control" placeholder="Розкажіть про себе..."></textarea>
                 <span asp-validation-for="Biography" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group d-flex " style = "margin-top: 5px; gap: 10px;">
                 <input type="submit" value="Додати" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-light">Всі фотографи</a>
+
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Всі фотографи</a>
-    не знайшли потрібну країну? Додайте її до бази прямо зараз!
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
