--- a/GalleryInfrastructure/Views/Authors/Details.cshtml
+++ b/GalleryInfrastructure/Views/Authors/Details.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Інформація";
 }
+<div class="margin_top_50"></div>
 
 
 <div>
@@ -43,9 +44,8 @@
         {
             var base64 = Convert.ToBase64String(item.Image);
             var imgSrc = $"data:image/jpeg;base64,{base64}";
-            <a asp-action="Details" asp-route-id="@item.Id">
-                <img src="@imgSrc" alt="Image" />
-            </a>
+            <img src="@imgSrc" alt="Image" />
+
         }
     }
 </div>
