--- a/GalleryInfrastructure/Views/Countries/Create.cshtml
+++ b/GalleryInfrastructure/Views/Countries/Create.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Створення";
 }
+<div class="margin_top_50"></div>
 
 
 <h4>Створення</h4>
@@ -16,16 +17,15 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group d-flex " style="margin-top: 5px; gap: 10px;">
                 <input type="submit" value="Додати" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-light">Всі країни</a>
+
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Всі країни</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
