--- a/GalleryInfrastructure/Views/Locations/Details.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Details.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Інформація";
 }
 
+<div class="margin_top_50"></div>
 
 <div>
     <h4>Інформація</h4>
@@ -27,3 +28,37 @@
     <a asp-action="Edit" asp-route-id="@Model?.Id">Редагувати</a> |
     <a asp-action="Index">Всі локації</a>
 </div>
+
+<div class="img-row">
+    @foreach (var item in Model.Photos)
+    {
+        @if (item.Image != null)
+        {
+            var base64 = Convert.ToBase64String(item.Image);
+            var imgSrc = $"data:image/jpeg;base64,{base64}";
+            <img src="@imgSrc" alt="Image" />
+
+        }
+    }
+</div>
+
+@section Scripts {
+    <script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
+
+    <script>
+        var msnry;
+
+        function initMasonry() {
+            var grid = document.querySelector('.img-row');
+            msnry = new Masonry(grid, {
+                itemSelector: 'img',
+                columnWidth: 'img',
+                percentPosition: true
+            });
+        }
+
+        document.addEventListener("DOMContentLoaded", function () {
+            initMasonry();
+        });
+    </script>
+}
