--- a/GalleryInfrastructure/Views/Locations/Index.cshtml
+++ b/GalleryInfrastructure/Views/Locations/Index.cshtml
@@ -5,6 +5,9 @@
 }
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
+<div class="margin_top_50"></div>
+
+
 <div class="d-flex justify-content-between ">
     <h1>Локації</h1>
     <p>
@@ -54,20 +57,18 @@
     }
 
     // Додати маркер на карту
-    // Додати маркер на карту
     function addMarker(location) {
         let popupContent = `<strong>${location.Name}</strong>`;
 
-        // Перевірка наявності посилання
         if (location.Link) {
             popupContent += `<br><a href="${location.Link}" target="_blank">Перейти до локації</a>`;
         }
 
         const marker = L.marker([location.Latitude, location.Longitude]).addTo(map)
             .bindPopup(popupContent)
-            .bindTooltip(location.Name, { direction: 'top' }) // Додаємо тултіп з позицією зверху
+            .bindTooltip(location.Name, { direction: 'top' }) 
             .on('click', function () {
-                map.setView([location.Latitude, location.Longitude], 11); // Переміщення при натисканні на маркер
+                map.setView([location.Latitude, location.Longitude], 11); 
             });
 
         // При відкритті попапа ховаємо тултіп
@@ -77,18 +78,14 @@
 
         // При закритті попапа знову додаємо тултіп
         marker.on('popupclose', function (e) {
-            marker.bindTooltip(location.Name, { direction: 'top' }); // Тултіп буде з'являтись зверху
+            marker.bindTooltip(location.Name, { direction: 'top' }); 
         });
     }
 
-
-
-
-    // Відображення всіх маркерів спочатку
     displayMarkers();
 
     // Функція для переміщення до локації на карті
     function moveToLocation(lat, lng) {
-        map.setView([lat, lng], 15); // Переміщення до координат локації з збільшенням
+        map.setView([lat, lng], 15); 
     }
 </script>
