--- a/GalleryInfrastructure/Views/Photos/Create.cshtml
+++ b/GalleryInfrastructure/Views/Photos/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Створення";
 }
 
+<div class="margin_top_50"></div>
+
 
 <h4>Створення</h4>
 <hr />
@@ -44,15 +46,13 @@
                 <img id="previewImage" src="" alt="Image Preview" style="max-width: 100%; height: auto;" />
             </div>
 
-            <div class="form-group">
+            <div class="form-group d-flex " style="margin-top: 5px; gap: 10px;">
                 <input type="submit" value="Додати" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-light">До галереї</a>
+
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Всі фото</a>
 </div>
 
 @section Scripts {
