--- a/GalleryInfrastructure/Views/Shared/_Layout.cshtml
+++ b/GalleryInfrastructure/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Photos" asp-action="Index">Галерея</a>
+                            </li>                            
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Photos" asp-action="PhotoStatisticsByYear">Статистика</a>
                             </li>
                         </ul>
                     </div>
